    name into the module name.

    Updated the SWI-Prolog and YAP config files in order to preprocess the
    reexport/2 module directive, converting the module file name into the
    module name.

    Updated the SWI-Prolog config file with more robust and fast code for
    preprocessing module directives when the modules are already loaded.

    Added support for parsing use_module/3 directives to the SICStus Prolog
    config files. Improved finding the module name from the module file name
    when preprocessing the directives use_module/1-2.

    Replaced the predicate as_dictionary/2 in the library object "bintree"
    with a new implementation, contributed by Paul Fodor, that returns a
    semi-balanced tree.

    Updated the "examples/tester.sh" script in order to report an error when
    the default Prolog back-end compiler is not found. Thanks to Parker Jones
    for the bug report. Updated the script to also report errors that are not
    written to standard error.

    Updated the "encodings" example unit test loader file to correctly detect
    back-end Prolog compilers supporting the encoding/1 directive. Added new
    test files for each supported text encoding.

    Fixed a typo that prevented running the "mtbatch" example using XSB as the
    back-end Prolog compiler. 

    Simplified the "cc" example when using SICStus Prolog 4.x as the back-end
    compiler by moving importing of the "system3" library shell/1-2 predicates
    to the config file.

    Added unit test supporting files for the "constraints" example.


2.39.1 - March 31, 2010

    Updated the Logtalk compiler and runtime to support calls to the built-in
    predicates threaded_peek/2 and threaded_exit/2 where the second argument
    (thread tag) is only instantiated at runtime. Updated the exception term
    thrown by threaded_exit/2 when the thread goal don't exist to use error/3
    instead of error/2.

    Updated the implementation of the uses/2 directive in order to allow